# embbed

desktop/cpp/car_server/: CMakeLists.txt
desktop/cpp/car_server/include/: Buffer.hpp  CarState.hpp  Messages.hpp  Server.hpp
desktop/cpp/car_server/src/: Server.cpp  main.cpp
desktop/python/: Cluster.py  ClusterTheme.py  DigitalCluster.py  JetCarGame.py  Jetcar.py  pygame-car-sim.py
espn32/libs/: sysfont.py
espn32/python/: display.py  st7735_tft.py  teste.py  teste2.py  webserver.py  webtest.py
espn32/tools/: diagrama.txt  micropython.sh
